Adopt SmallRye Config (#1193)